# vpp

./: LICENSE  README.md  down.sh  up.sh
substrate-front-end-template/: README.md  package.json
substrate-front-end-template/config/: config.js  defaultSettings.js
substrate-front-end-template/mock/: user.js
substrate-front-end-template/src/config/: common.json  development.json  index.js
substrate-front-end-template/src/context/: accounts.js  api.js
substrate-front-end-template/src/layouts/: BasicLayout.jsx  SecurityLayout.jsx  UserLayout.jsx  UserLayout.less  app.jsx
substrate-front-end-template/src/lib/: lib.js
substrate-front-end-template/src/pages/: Welcome.jsx
substrate-front-end-template/src/substrate-lib/: SubstrateContext.js  index.js  useSubstrate.js
substrate-front-end-vpp/: Dockerfile  docker-compose.yml
substrate-front-end-vpp/mock/: user.js
substrate-front-end-vpp/src/config/: development.json
substrate-front-end-vpp/src/context/: api.js
substrate-front-end-vpp/src/hook/: api.js  lib.js
substrate-front-end-vpp/src/layouts/: SecurityLayout.jsx  UserLayout.jsx
substrate-node-template/: .gitignore  Cargo.toml  Makefile
substrate-node-template/node/: Cargo.toml
substrate-node-template/pallets/audit/: Cargo.toml
substrate-node-template/primitives/: Cargo.toml
substrate-node-template/primitives/src/: lib.rs
substrate-node-template/runtime/: Cargo.toml
substrate-node-vpp/: Cargo.toml  Dockerfile  Makefile  docker-compose.yml
substrate-node-vpp/primitives/: Cargo.toml
substrate-node-vpp/runtime/: Cargo.toml
(+86 files in other folders)
