[package]
description = 'miner common'
edition = '2018'
license = "Apache-2.0"
name = 'primitives'
version = '2.0.0-rc5'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-std  = { tag = 'v2.0.0-rc2', version = "2.0.0-rc2", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
frame-support  = { tag = 'v2.0.0-rc2', version = "2.0.0-rc2", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '1.3.0'}

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'frame-support/std',
]

